# folder2k8s

./: .env  CHANGELOG.md  Dockerfile  Makefile  pyproject.toml
rootfs/etc/services.d/server/: run
src/folder2k8s/: __init__.py
src/folder2k8s/folder/: __init__.py  folderadapter.py  helmchart.py
src/folder2k8s/kubernetes/: __init__.py  helmchart.py  kubernetesadapter.py
